Feat: Creating all CRUD for all models.
